--- a/README
+++ b/README
@@ -7,9 +7,15 @@
 
 (ve)~$ python manager.py celeryd -l info
 
-#last,you want to see the excuting task  status,please enter the GUI
+#last,you want to see the excuting task status,please enter the GUI
 
 (ve)~$ python manager.py celeryev
 
 #################### web server #####################
 (ve)~$ python manager.py runserver
+
+#################### admin system ######################
+(ve)~$ http://<server>/admin/
+
+#################### error log system(need admin authorize) ######################
+(ve)~$ http://<server>/sentry/
