--- a/README
+++ b/README
@@ -1,18 +1,18 @@
 ################### schedule task #####################
 #first ,start up the period task generator process
 
-(ve)~$ python manager.py celerybeat
+(ve)~$ python manage.py celerybeat
 
 #then ,start up the worker thread,celeryd
 
-(ve)~$ python manager.py celeryd -l info
+(ve)~$ python manage.py celeryd -l info
 
 #last,you want to see the excuting task status,please enter the GUI
 
-(ve)~$ python manager.py celeryev
+(ve)~$ python manage.py celeryev
 
 #################### web server #####################
-(ve)~$ python manager.py runserver
+(ve)~$ python manage.py runserver
 
 #################### admin system ######################
 (ve)~$ http://<server>/admin/
